--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nodejs-complete-guide",
+  "name": "ecommerce-shop",
   "version": "1.0.0",
   "description": "Complete Node.js Guide",
   "main": "app.js",
